--- a/index.html
+++ b/index.html
@@ -839,13 +839,13 @@ th{
 
           <!-- Toggle chips injected here -->
 			<!-- Toggle chips grouped -->
-			<div class="small muted" style="margin-top:10px;">Balances (left axis)</div>
+			<div class="small muted" style="margin-top:16px;">Balances</div>
 			<div class="chips" id="chipsBalances"></div>
 
-			<div class="small muted" style="margin-top:10px;">Cashflow (right axis)</div>
+			<div class="small muted" style="margin-top:16px;">Cashflow</div>
 			<div class="chips" id="chipsCashflow"></div>
 
-			<div class="small muted" style="margin-top:10px;">Per-property (optional)</div>
+			<div class="small muted" style="margin-top:16px;">Per-property</div>
 			<div class="chips" id="propertyChips"></div>
 
 
