--- a/index.html
+++ b/index.html
@@ -2459,7 +2459,7 @@ function renderAnalysisFlags({ rows, cols, fireIndex, cashKey }){
   el.innerHTML = `
     <div class="title">⚠ Analysis flags</div>
     <ul>
-      <<li>Cash becomes negative during the projection (${fmtMoney(minCash)})</li>
+      <li>Cash becomes negative during the projection (${fmtMoney(minCash)})</li>
 
     </ul>
   `;
