--- a/index.html
+++ b/index.html
@@ -583,7 +583,11 @@ th{
 	  font-weight: 700;
 	}
 
-	  
+	  /* === FORCE CLEAN BACKGROUND === */
+html, body {
+  background: #0b0e14 !important;
+}
+
 
   </style>
 </head>
