--- a/index.html
+++ b/index.html
@@ -585,8 +585,14 @@ th{
 
 	  /* === FORCE CLEAN BACKGROUND === */
 html, body {
-  background: #0b0e14 !important;
+  background: linear-gradient(
+    180deg,
+    #0a0d13 0%,
+    #0b0e14 50%,
+    #0c1018 100%
+  ) !important;
 }
+
 
 
   </style>
