--- a/index.html
+++ b/index.html
@@ -585,13 +585,20 @@ th{
 
 	  /* === FORCE CLEAN BACKGROUND === */
 html, body {
-  background: linear-gradient(
-    180deg,
-    #0a0d13 0%,
-    #0b0e14 50%,
-    #0c1018 100%
-  ) !important;
+  background:
+    radial-gradient(
+      1200px 800px at 50% 0%,
+      rgba(255,255,255,0.03),
+      transparent 60%
+    ),
+    linear-gradient(
+      180deg,
+      #0a0d13 0%,
+      #0b0e14 50%,
+      #0c1018 100%
+    ) !important;
 }
+
 
 
 
