--- a/index.html
+++ b/index.html
@@ -586,10 +586,11 @@ th{
 	  /* === FORCE CLEAN BACKGROUND === */
 html, body {
   background:
-    radial-gradient(
-      1200px 800px at 50% 0%,
-      rgba(255,255,255,0.03),
-      transparent 60%
+    linear-gradient(
+      180deg,
+      rgba(255,255,255,0.035) 0%,
+      rgba(255,255,255,0.015) 20%,
+      rgba(255,255,255,0.0) 45%
     ),
     linear-gradient(
       180deg,
@@ -598,6 +599,7 @@ html, body {
       #0c1018 100%
     ) !important;
 }
+
 
 
 
