--- a/index.html
+++ b/index.html
@@ -589,6 +589,199 @@ th{
 	  cursor: pointer;
 	  font-weight: 700;
 	}
+	
+	/* ===== Landing v2 (more engaging) ===== */
+.landing-hero{
+  position: relative;
+  overflow: hidden;
+}
+
+.landing-hero::before{
+  content:"";
+  position:absolute;
+  inset:-120px;
+  background:
+    radial-gradient(700px 420px at 20% 20%, rgba(139,92,246,.35), transparent 55%),
+    radial-gradient(650px 420px at 80% 25%, rgba(34,211,238,.28), transparent 60%),
+    radial-gradient(720px 520px at 55% 85%, rgba(46,229,157,.14), transparent 60%);
+  filter: blur(8px);
+  animation: floatGlow 9s ease-in-out infinite alternate;
+  pointer-events:none;
+  opacity:.85;
+}
+
+@keyframes floatGlow{
+  0%   { transform: translate3d(-10px, 0px, 0) scale(1); }
+  100% { transform: translate3d(10px, -10px, 0) scale(1.02); }
+}
+
+.hero-grid{
+  display:grid;
+  grid-template-columns: 1.1fr .9fr;
+  gap: 18px;
+  align-items: stretch;
+}
+@media (max-width: 980px){ .hero-grid{ grid-template-columns:1fr; } }
+
+.hero-title{
+  font-size: 44px;
+  line-height: 1.05;
+  letter-spacing: -.02em;
+  margin: 0 0 12px 0;
+}
+@media (max-width: 980px){ .hero-title{ font-size: 36px; } }
+
+.hero-lede{
+  font-size: 16px;
+  color: rgba(255,255,255,.72);
+  line-height: 1.55;
+  max-width: 62ch;
+}
+
+.hero-actions{
+  display:flex;
+  gap: 10px;
+  align-items:center;
+  flex-wrap:wrap;
+  margin-top: 18px;
+}
+
+.btn.primary.big{
+  padding: 14px 18px;
+  font-size: 15px;
+  transform: translateY(0);
+  transition: transform 160ms ease, filter 160ms ease;
+}
+.btn.primary.big:hover{ transform: translateY(-1px); filter: brightness(1.05); }
+
+.btn.soft{
+  border-color: rgba(255,255,255,.14);
+  background: rgba(255,255,255,.04);
+}
+.btn.soft:hover{
+  border-color: rgba(34,211,238,.35);
+  background: rgba(34,211,238,.08);
+}
+
+.feature-card{
+  border: 1px solid rgba(255,255,255,.10);
+  background: rgba(0,0,0,.16);
+  border-radius: 22px;
+  padding: 14px 14px;
+  transition: transform 160ms ease, border-color 160ms ease, background 160ms ease;
+}
+.feature-card:hover{
+  transform: translateY(-2px);
+  border-color: rgba(139,92,246,.35);
+  background: rgba(139,92,246,.06);
+}
+
+.kicker{
+  display:inline-flex;
+  gap:8px;
+  align-items:center;
+  padding: 8px 12px;
+  border-radius: 999px;
+  border: 1px solid rgba(255,255,255,.12);
+  background: rgba(0,0,0,.18);
+  color: rgba(255,255,255,.74);
+  font-size: 13px;
+  margin-bottom: 14px;
+}
+
+.pulseDot{
+  width:10px;height:10px;border-radius:999px;
+  background: linear-gradient(135deg, var(--accent), var(--accent2));
+  box-shadow: 0 0 0 0 rgba(139,92,246,.35);
+  animation: pulse 1.8s ease-out infinite;
+}
+@keyframes pulse{
+  0%{ box-shadow: 0 0 0 0 rgba(139,92,246,.35); }
+  100%{ box-shadow: 0 0 0 12px rgba(139,92,246,0); }
+}
+
+.preview{
+  border: 1px solid rgba(255,255,255,.12);
+  background: rgba(0,0,0,.18);
+  border-radius: 24px;
+  padding: 14px;
+  position: relative;
+  overflow:hidden;
+}
+
+.preview::after{
+  content:"";
+  position:absolute;
+  inset:-40px;
+  background: radial-gradient(380px 220px at 70% 20%, rgba(34,211,238,.18), transparent 60%);
+  filter: blur(8px);
+  opacity:.75;
+  pointer-events:none;
+}
+
+.previewTop{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:10px;
+  margin-bottom: 10px;
+}
+
+.previewTitle{
+  font-weight: 850;
+  letter-spacing:.2px;
+}
+
+.miniTag{
+  font-size: 12px;
+  padding: 6px 10px;
+  border-radius: 999px;
+  border: 1px solid rgba(255,255,255,.12);
+  background: rgba(255,255,255,.04);
+  color: rgba(255,255,255,.72);
+}
+
+.sparkline{
+  width: 100%;
+  height: 150px;
+  border-radius: 18px;
+  border: 1px solid rgba(255,255,255,.08);
+  background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.01));
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+.steps{
+  display:grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 12px;
+  margin-top: 14px;
+}
+@media (max-width: 980px){ .steps{ grid-template-columns:1fr; } }
+
+.step{
+  border: 1px solid rgba(255,255,255,.10);
+  background: rgba(0,0,0,.14);
+  border-radius: 20px;
+  padding: 14px;
+}
+.step .n{
+  font-family: var(--mono);
+  font-size: 12px;
+  color: rgba(255,255,255,.55);
+  margin-bottom: 6px;
+}
+.step .t{
+  font-weight: 850;
+  margin-bottom: 6px;
+}
+.step .d{
+  color: rgba(255,255,255,.72);
+  font-size: 13px;
+  line-height: 1.45;
+}
+
 
 	  /* === FORCE CLEAN BACKGROUND === */
 html, body {
@@ -634,56 +827,124 @@ html, body {
     </div>
 	
 <!-- LANDING -->
-<section id="tab-landing" class="tabs active" style="margin-top:60px;">
+<!-- LANDING -->
+<section id="tab-landing" class="tabs active" style="margin-top:18px;">
   <div class="grid cols1">
-    <div class="card" style="text-align:center; padding:48px 32px;">
-      
-      <div class="brand" style="justify-content:center; margin-bottom:18px;">
-        <span class="dot"></span>
-        <span style="font-size:22px;">FIRE Model</span>
+    <div class="card landing-hero" style="padding:28px;">
+
+      <div class="hero-grid">
+
+        <!-- LEFT: copy + CTA -->
+        <div>
+          <div class="kicker">
+            <span class="pulseDot"></span>
+            <span>Scenario-based FIRE modelling • Australia-focused</span>
+          </div>
+
+          <div class="brand" style="margin-bottom:10px;">
+            <span class="dot"></span>
+            <span style="font-size:18px;">FIRE Model</span>
+            <span class="pill">General info only</span>
+          </div>
+
+          <h1 class="hero-title">Know your FIRE age — <span style="background:linear-gradient(135deg, rgba(139,92,246,1), rgba(34,211,238,1)); -webkit-background-clip:text; background-clip:text; color:transparent;">with property + super</span></h1>
+
+          <p class="hero-lede">
+            Enter your income, expenses, properties and assumptions. Instantly compare scenarios like
+            <b>Rent vs Buy</b>, <b>Offset vs no offset</b>, and <b>PPOR vs investment</b> — and see the earliest point your plan becomes self-funding.
+          </p>
+
+          <div class="hero-actions">
+            <button class="btn primary big" onclick="enterApp()">Get Started</button>
+            <button class="btn soft" onclick="scrollLanding('landingProof')">See what you get</button>
+            <span class="small">No signup. Not financial advice.</span>
+          </div>
+
+          <div class="steps" id="landingProof">
+            <div class="step">
+              <div class="n">01</div>
+              <div class="t">Set your inputs</div>
+              <div class="d">Income, expenses, inflation, returns, super settings.</div>
+            </div>
+            <div class="step">
+              <div class="n">02</div>
+              <div class="t">Add properties</div>
+              <div class="d">Loans, rent, rates/strata, growth, owner-occupied vs investment.</div>
+            </div>
+            <div class="step">
+              <div class="n">03</div>
+              <div class="t">Get clarity</div>
+              <div class="d">Charts + tables + FIRE eligibility marker for decision-making.</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- RIGHT: preview -->
+        <div class="preview">
+          <div class="previewTop">
+            <div class="previewTitle">Preview</div>
+            <div class="miniTag">FIRE marker + cashflow</div>
+          </div>
+
+          <div class="sparkline" aria-hidden="true">
+            <svg viewBox="0 0 600 220" width="100%" height="150" style="opacity:.95;">
+              <!-- grid -->
+              <g opacity="0.22">
+                <path d="M30 40 H570" stroke="white" stroke-width="1"/>
+                <path d="M30 90 H570" stroke="white" stroke-width="1"/>
+                <path d="M30 140 H570" stroke="white" stroke-width="1"/>
+                <path d="M30 190 H570" stroke="white" stroke-width="1"/>
+              </g>
+
+              <!-- line 1 -->
+              <path d="M30 175 C120 160, 160 120, 230 135 C300 150, 340 105, 420 95 C500 85, 540 60, 570 52"
+                    fill="none" stroke="rgba(139,92,246,.95)" stroke-width="5" stroke-linecap="round"/>
+
+              <!-- line 2 -->
+              <path d="M30 190 C110 175, 160 170, 230 160 C320 148, 360 140, 420 130 C500 112, 535 105, 570 98"
+                    fill="none" stroke="rgba(34,211,238,.85)" stroke-width="4" stroke-linecap="round" opacity="0.9"/>
+
+              <!-- FIRE marker -->
+              <path d="M410 25 V200" stroke="rgba(255,255,255,.55)" stroke-width="2" stroke-dasharray="8 8"/>
+              <g>
+                <rect x="418" y="28" rx="10" ry="10" width="120" height="36" fill="rgba(0,0,0,.45)" stroke="rgba(255,255,255,.15)"/>
+                <text x="432" y="52" fill="rgba(255,255,255,.90)" font-size="16" font-family="ui-sans-serif, system-ui">FIRE @ 47</text>
+              </g>
+            </svg>
+          </div>
+
+          <div class="grid cols1" style="margin-top:12px; gap:10px;">
+            <div class="feature-card">
+              <div class="sub" style="margin:0 0 6px 0;">Outcome</div>
+              <div style="font-weight:850; font-size:18px;">Your FIRE age + “bridge to super”</div>
+              <div class="sub" style="margin-top:6px;">See if cash goes negative and where the plan breaks.</div>
+            </div>
+
+            <div class="grid cols2" style="gap:10px;">
+              <div class="feature-card">
+                <div class="sub" style="margin:0 0 6px 0;">Scenario delta</div>
+                <div style="font-weight:850;">Rent vs Buy</div>
+                <div class="sub">Compare impacts on FIRE date.</div>
+              </div>
+              <div class="feature-card">
+                <div class="sub" style="margin:0 0 6px 0;">Cashflow view</div>
+                <div style="font-weight:850;">Income vs target</div>
+                <div class="sub">See FIRE income vs FIRE target.</div>
+              </div>
+            </div>
+
+            <div class="small" style="color:rgba(255,255,255,.55);">
+              General information only. Not financial advice.
+            </div>
+          </div>
+
+        </div>
+
       </div>
-
-      <h1 style="font-size:36px; margin:0 0 12px 0;">
-        See when you actually reach FIRE
-      </h1>
-
-      <p class="sub" style="font-size:16px; max-width:720px; margin:0 auto;">
-        Model your path to financial independence using Australian-specific assumptions —
-        including property, rent, super, and realistic cashflow.
-        <br/><br/>
-        No sign-up. No advice. Just clear scenarios.
-      </p>
-
-      <div class="hr"></div>
-
-      <div class="grid cols3" style="margin-top:24px;">
-        <div class="kpi">
-          <div class="k">Compare scenarios</div>
-          <div class="v">Rent vs Buy</div>
-        </div>
-        <div class="kpi">
-          <div class="k">Model reality</div>
-          <div class="v">Property + Super</div>
-        </div>
-        <div class="kpi">
-          <div class="k">Find clarity</div>
-          <div class="v">FIRE age</div>
-        </div>
-      </div>
-
-      <div class="hr"></div>
-
-      <button class="btn primary" style="font-size:16px; padding:14px 22px;"
-        onclick="enterApp()">
-        Get Started
-      </button>
-
-      <p class="small" style="margin-top:14px;">
-        General information only. Not financial advice.
-      </p>
     </div>
   </div>
 </section>
+
 
     <!-- HOME -->
  <!-- HOME -->
@@ -1445,6 +1706,12 @@ function initLanding(){
   document.body.classList.add("landing");
   showTab("landing");
 }
+
+function scrollLanding(id){
+  const el = document.getElementById(id);
+  if(el) el.scrollIntoView({ behavior: "smooth", block: "start" });
+}
+
 
 
 /** ---------------------------
