--- a/index.html
+++ b/index.html
@@ -617,9 +617,8 @@ th{
 
 .hero-grid{
   display:grid;
-  grid-template-columns: 1.1fr .9fr;
+  grid-template-columns: 1fr;
   gap: 18px;
-  align-items: stretch;
 }
 @media (max-width: 980px){ .hero-grid{ grid-template-columns:1fr; } }
 
